--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.7.0",
     "jest": "^25.1.0"
   }
 }
