--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^25.1.2",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.7.0",
     "jest": "^25.1.0"
